--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>MiProyecto</title>
 </head>
 <body>
-    <h1>Titulo</h1>
+    <h1>Coderhouse</h1>
     <p>Esto es una lista desorganizada:</p>
     <ul>
         <li>Punto uno</li>
@@ -17,5 +17,6 @@
     <li>Punto uno</li>
     <li>Punto dos</li>
     <li>Punto tres</li>
+    <a href="home.html">Ir a home.html</a>
 </body>
 </html>
